<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="username_hint">Enter your Username</string>
    <string name="password_hint">Enter your password</string>
    <string name="This_field_is_required">This field is Required!</string>
    <string name="title_activity_todo_list">TodoList</string>
    <string name="action_add">Add new task</string>
    <string name="action_sync">Sync</string>
    <string name="title_activity_todolistnew">ToDoList</string>
    <string name="Action_setting">Setting</string>
    <string name="title_activity_add_new_todo">Add new Todo</string>
    <string name="clear_all">Clear all</string>
    <string name="discard">Discard</string>
    <string name="todo_hint">What are you planing to do??</string>
    <string name="Done">Done</string>
    <string name="Add_to_list">Add to list</string>
    <string name="Welcome">Welcome to ToDoList Maker</string>
</resources>
