<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.bluedragons.todolist.AddNewTodo">



    <include layout="@layout/content_add_new_todo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/todo_hint"
            android:id="@+id/editText"
            android:layout_toStartOf="@+id/cross" />
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:id="@+id/cross"
            android:layout_alignParentRight="true"
            android:background="@android:drawable/ic_delete"
            />
    </RelativeLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:checked="false"
        android:text="@string/Done"
        android:layout_below="@+id/relativeLayout"

        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/Add_to_list"
        android:id="@+id/button2"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="45dp"
         />


</RelativeLayout>
